--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haskell-nsis",
   "version": "0.1.0",
-  "description": "Snippets for the Haskell NSIS package",
+  "description": "Snippets for the Haskell NSIS package. Work in progress!",
   "license": "MIT OR GPL-2.0",
   "author": {
     "name": "Jan T. Sott",
