--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/idleberg/atom-haskell-nsis.git"
+    "url": "https://github.com/idleberg/atom-haskell-nsis.git"
   },
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
